<resources>
    <string name="app_name">NiceTours</string>
    <!--<string name="google_maps_key">AIzaSyDS4XKTdBOxv2_qfZcPI_j8l7EphRHBANU</string>--> <!-- Justin KEY -->
    <string name="google_maps_key">AIzaSyDzw47QwwNwNM2kFne6KsviyP5bv1SyDak</string> <!-- STANDARD KEY -->
    <!--<string name="google_maps_key">AIzaSyBHt-nxSl5JUabLPUeOmOutThpt5CmxhVU</string>-->

    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_configuration">Kriterien auswählen</string>
    <string name="title_activity_poiselector">Sehenswürdigkeiten auswählen</string>
    <string name="title_activity_maps">Karte</string>
    <string name="title_end_screen">Statistiken</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="action_startTour">Neue Tour Erstellen</string>
    <string name="label_config_info">Gestaltung der Tour</string>
    <string name="roundLabel">Rundgang</string>
    <string name="distanceLabel">Distanz</string>
    <string name="tempoLabel">Lauftempo</string>
    <string name="durationLabel">Dauer</string>
    <string name="visitedPOIs">Besuchte\nSehenswürdigkeiten</string>
    <string name="roundOn">An</string>
    <string name="roundOff">Aus</string>
    <string name="continueStr">Weiter</string>
    <string name="endStr">Tour Abschließen</string>
    <string name="ok">OK</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="loading_pois">Lade Sehenswürdigkeiten...</string>

    <!-- Dialog Strings -->
    <string name="error_dialog_title">Fehler</string>
    <string name="dialog_no_permissions">Berechtigungen notwendig. Anwendung wird beendet!</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_no_poi_selected">Bitte mindestens eine Sehenswürdigkeit auswählen!</string>
    <string name="dialog_want_to_exit">Wollen Sie die Tour wirklich beenden?</string>
    <string name="dialog_finish_title">Glückwunsch!</string>
    <string name="dialog_want_to_finish">Tour abgeschlossen! Karte verlassen?</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <string name="tab_text_1">Liste</string>
    <string name="tab_text_2">Karte</string>
    <string name="pick_place">Choose a place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="title_activity_test_watch_sending">TestWatchSending</string>
    <string name="error_no_pois_found">Es wurden keine Sehenswürdigkeiten in der Nähe gefunden!</string>

    <string name="yelp_client_id">xKC6YmV-Ols2rTPbR5xzyg</string>
    <string name="yelp_client_secret">z7p726NnspPBvAjEM98fDEBzpd5DuTrxzHmfAGQPzdBVGmzO0JcZWqQxxugq7U4K</string>
    <string name="option_get_place">Get POIs</string>

    <!-- Menu Strings -->
    <string name="menu_exit_tour">Tour Beenden</string>

    <!-- Watch Strings -->
    <string name="no_info_text">Keine Informationen verfügbar.</string>

</resources>
