<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.de.testssapplication.ConfigurationActivity">

    <TableLayout
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/label_roundtour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/roundLabel" />

            <Switch
                android:id="@+id/switch_roundtour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="right"
                android:text="@string/roundOff" />
        </TableRow>

        <TableRow
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/label_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/distanceLabel" />

            <EditText
                android:id="@+id/edit_text_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="right"
                android:gravity="right"
                android:inputType="numberDecimal"
                android:lines="1"
                android:text="2.0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="km" />
        </TableRow>

        <TableRow
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/label_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/durationLabel" />

            <EditText
                android:id="@+id/edit_text_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="right"
                android:gravity="right"
                android:inputType="numberDecimal"
                android:lines="1"
                android:text="1.0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="h" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/continueSelectionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/continueStr"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>
