<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.de.testssapplication.EndScreenActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_duration"
                android:layout_width="wrap_content"
                android:layout_marginRight="160dp"
                android:textSize="@dimen/configuration_activity_text_size"
                android:layout_height="wrap_content"
                android:text="@string/durationLabel" />

            <TextView
                android:id="@+id/label_statistic_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/configuration_activity_text_size">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_tempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="146dp"
                android:textSize="@dimen/configuration_activity_text_size"
                android:text="@string/distanceLabel" />

            <TextView
                android:id="@+id/label_statistic_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/configuration_activity_text_size">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_roundtour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="53dp"
                android:textSize="@dimen/configuration_activity_text_size"
                android:minLines="2"
                android:text="@string/visitedPOIs" />

            <TextView
                android:id="@+id/label_poiCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minLines="2"
                android:textSize="@dimen/configuration_activity_text_size" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/endTourButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/endStr"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>
